--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 <ul>
     <% for(var i=0; i<comments.length; i++) { %>
         <li>
-            <%= comments[i] %>
+            <%= comments[i].comment %>
         </li>
     <% } %>
 </ul>
