--- a/views/user.ejs
+++ b/views/user.ejs
@@ -3,9 +3,8 @@
 <ul>
     <% for(var i=0; i<comments.length; i++) { %>
         <li>
-            <%= comments[i] %>
+            <%= comments[i].comment %>
         </li>
     <% } %>
 </ul>
-
 <a href="/login">Login</a>
